@@ -358,8 +358,8 @@ AC_SUBST(GDB)
 JAVA_CLASSPATH=$ac_java_classpath
 AC_SUBST(JAVA_CLASSPATH)
 
-# Start Java runtime with 5 Meg Min Heap and 22 Meg Max Heap
-JAVA_FLAGS="$JAVA_FLAGS -ms5m -mx22m"
+# Start Java runtime with 5 Meg Min Heap and 32 Meg Max Heap
+JAVA_FLAGS="$JAVA_FLAGS -ms5m -mx32m"
 AC_SUBST(JAVA_FLAGS)
 
 AC_SUBST(JAVAC_FLAGS)
